# PersonalKBDrafter

./: README.md  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/bindings/: ArticleStatus.ts  FlaggedSection.ts
src-tauri/src/commands/: articles.rs  confluence.rs  drafting.rs  jira.rs  mod.rs  templates.rs
src-tauri/src/db/: articles.rs  mod.rs  templates.rs
src-tauri/src/models/: article.rs  confluence.rs  jira.rs  mod.rs  quality.rs  template.rs
src-tauri/src/services/: confluence.rs  drafter.rs  jira.rs  markdown_to_confluence.rs  mod.rs  ollama.rs  quality.rs  sensitive_data.rs  tokens.rs
src/bindings/: Article.ts  ConfluenceSpace.ts  JiraComment.ts  JiraTicket.ts  PublishResult.ts  QualityScore.ts  Template.ts
src/components/: ArticleForm.tsx  ConnectionStatus.tsx  DraftingSpinner.tsx  DraftsList.tsx  JiraTicketPicker.tsx  MarkdownEditor.tsx  PreviewPane.tsx  PublishDialog.tsx  QualityScoreBadge.tsx  SensitiveDataFlags.tsx  SettingsModal.tsx  TemplateSelector.tsx
src/hooks/: useArticleForm.ts  useDraftArticle.ts
src/lib/: markdownParser.ts  tauri.ts
src/stores/: authStore.ts  settingsStore.ts
